# uranus-core.nvim

./: .editorconfig  .gitattributes  .gitignore  .luacheckrc  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Makefile  README.md  debug_test.lua  lazy.lua  rustfmt.toml  stylua.toml  test_autostart.lua  test_backend.lua  test_backend_start.lua  test_integration.lua  test_manual_backend.lua  test_notebook.ipynb  test_sync_integration.lua
.github/workflows/: ci.yml  release.yml  test.yml
docs/: COMPARISON.md
lua/: jupyter_installer.lua
lua/uranus/: async_bridge.lua  backend.lua  cache.lua  cell_mode.lua  completion.lua  config.lua  example_config.lua  factory.lua  init.lua  inspector.lua  kernel.lua  kernel_manager.lua  keymaps.lua  logger.lua  lsp.lua  messages.lua  notebook.lua  notebook_ui.lua  output.lua  output_batch.lua  parallel.lua  parsers.lua  remote.lua  repl.lua  repl_buffer.lua  runtime.lua  state.lua  ui.lua
lua/uranus/core/: config.lua  errors.lua  factory.lua  init.lua  state.lua
lua/uranus/kernel/: cache.lua  pool.lua
lua/uranus/lsp/: completion.lua  lsp.lua
lua/uranus/notebook/: cell_mode.lua  notebook.lua  notebook_ui.lua
lua/uranus/remote/: remote.lua
lua/uranus/ui/: inspector.lua  keymaps.lua  (+4 more)
plugin/: uranus.lua
src/: async_bridge.rs  connection.rs  error.rs  execute.rs  kernel.rs  kernel_pool.rs  lib.rs  messages.rs  notebook.rs  parallel.rs  protocol.rs  remote.rs  runtime.rs
tests/: minimal_init.lua  run_tests.lua  run_tests_plenary.lua  test_integration.lua  test_integration_e2e.lua  test_integration_modules.lua  test_integration_parallel.lua  test_jupyter_installer.lua  test_lsp.lua  test_notebook_parsing.lua  test_performance.lua  test_runner.lua  test_stdin.lua  testlib.lua  uranus_spec.lua
tests/fixtures/: test_notebook.ipynb
uranus-rs/: Cargo.toml
uranus-rs/src/: kernel.rs  lib.rs  main.rs  protocol.rs  zmq_client.rs
(+9 files in other folders)
