[package]
name = "uranus"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "uranus"
crate-type = ["cdylib", "rlib"]

[dependencies]
nvim-oxi = { version = "0.6", features = ["mlua", "neovim-0-11"] }
runtimelib = { version = "1.5", features = ["tokio-runtime"] }
jupyter-protocol = "1.4"
nbformat = "1.2"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"
zmq = "0.10"
